--- a/index.html
+++ b/index.html
@@ -4,12 +4,9 @@
     <link rel="icon" type="image/png" href="asset/favicon.png" />
 </head>
 <body>
-    <div id="content" >
-        <img id="cat" width="200" height="200"/>
-        <img id="dog" width="200" height="200"/>
-    </div>
-    <button type="button" onclick="select('cat')">Cat is Cuter</button>
-    <button type="button" onclick="select('dog')">Dog is Cuter</button>
+    <h1>CLICK on the CUTER IMAGE</h1>
+    <button type="button" onclick="select('cat')"><img id="cat" width="200" height="200"/><br/>Cat is Cuter</button>
+    <button type="button" onclick="select('dog')"><img id="dog" width="200" height="200"/><br/>Dog is Cuter</button>
     <script type="text/javascript" src="script/content.js" ></script>
 </body>
 </html>
