--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <h1>CLICK on the CUTER IMAGE</h1>
     <button type="button" onclick="select('cat')"><img id="cat" width="200" height="200"/><br/>Cat is Cuter</button>
     <button type="button" onclick="select('dog')"><img id="dog" width="200" height="200"/><br/>Dog is Cuter</button>
+    <br/>
+    <br/>
+    <a href="samplePlot.html"><h4>RESULT</h4></a>
     <script type="text/javascript" src="script/content.js" ></script>
 </body>
 </html>
