--- a/samplePlot.html
+++ b/samplePlot.html
@@ -44,6 +44,6 @@ rect:hover {  fill:blue; }
 <div id='dashboard3'></div>
 <br/>
 <br/>
-<a href="../"><h4>BACK</h4></a>
+<a href="/CATvsDOG/"><h4>BACK</h4></a>
 <script type="text/javascript" src="https://d3js.org/d3.v3.min.js"></script>
 <script type="text/javascript" src="script/samplePlot.js"></script>
